New transform tools in sculpt mode works weird if origin is not in world center 0,0,0. #69804

Closed
opened 2019-09-12 15:11:29 +02:00 by Vertex · 5 comments

System Information
Operating system: Windows7

Blender Version
Broken: version: 2.81 (sub 10), branch: master, commit date: 2019-09-12 09:34, hash: 492a7998d5

Short description of error
If object origin not in center of the world (0,0,0), then rotating around 3d cursor going crazy.

Exact steps for others to reproduce the error
Move object origin from 0,0,0, set pivot point to 3d cursor, move 3d cursor where you want, go to sculpt mode, try rotate tool (or transform, etc). Then go to object mode, move origin to 0,0,0, go to sculpt mode try rotate again, now it works as expected.

LTxrDei5ox.gif
bug_sculp_3dcursor.blend

**System Information** Operating system: Windows7 **Blender Version** Broken: version: 2.81 (sub 10), branch: master, commit date: 2019-09-12 09:34, hash: `492a7998d5` **Short description of error** If object origin not in center of the world (0,0,0), then rotating around 3d cursor going crazy. **Exact steps for others to reproduce the error** Move object origin from 0,0,0, set pivot point to 3d cursor, move 3d cursor where you want, go to sculpt mode, try rotate tool (or transform, etc). Then go to object mode, move origin to 0,0,0, go to sculpt mode try rotate again, now it works as expected. ![LTxrDei5ox.gif](https://archive.blender.org/developer/F7739604/LTxrDei5ox.gif) [bug_sculp_3dcursor.blend](https://archive.blender.org/developer/F7739607/bug_sculp_3dcursor.blend)
Author

Added subscriber: @VertexPainter

Added subscriber: @VertexPainter
Pablo Dobarro self-assigned this 2019-09-12 15:12:06 +02:00
Member

Added subscriber: @kursadk

Added subscriber: @kursadk
Member

Could this be related to https://developer.blender.org/T69775 ? The cursor pivot point is quite wonky

Could this be related to https://developer.blender.org/T69775 ? The cursor pivot point is quite wonky

This issue was referenced by f71d89bb04

This issue was referenced by f71d89bb047e33e8990e2d87d19484b09452d3ca
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69804
No description provided.