Fix T69804: Transform tools in sculpt mode fails with transformed objects

Reviewed By: mano-wii

Maniphest Tasks: T69804

Differential Revision: https://developer.blender.org/D5777